Add first attempt at frame creation and parsing
* Frame creation is pretty much there, with the exception of SETTINGS
* Frame parsing currently can't handle incomplete frames - will fix, but
checking in now so that git is a backup before the hackathon
* Integration with nghttp2 is in there

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -11,9 +11,17 @@ DISTCLEANFILES = $(pkgconfig_DATA)
 lib_LTLIBRARIES = libnghq.la
 
 OBJECTS = \
+	frame_creator.c \
+	frame_parser.c \
+	header_compression.c \
     nghq.c
 
-HDRS =
+HDRS = \
+	frame_creator.h \
+	frame_parser.h \
+	frame_types.h \
+	header_compression.h \
+	util.h
 
 libnghq_la_CFLAGS = -I$(top_srcdir)/include
 
