Add missing third party library flags to compile/link.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -26,8 +26,8 @@ HDRS = \
 	nghq_internal.h \
 	util.h
 
-libnghq_la_CFLAGS = -I$(top_srcdir)/include
-
+libnghq_la_CFLAGS = -I$(top_srcdir)/include $(NGTCP2_CFLAGS) $(NGHTTP2_CFLAGS)
+libnghq_la_LIBADD = $(NGTCP2_LIBS) $(NGHTTP2_LIBS)
 libnghq_la_SOURCES = $(HDRS) $(OBJECTS)
 libnghq_la_LDFLAGS = -no-undefined \
     -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
