Fix compiler errors.

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,6 @@
 # TODO: Add license preamble
 #
 
-SUBDIRS = lib include tests examples
+SUBDIRS = lib include/nghq tests examples
 
 ACLOCAL_AMFLAGS = -I m4
