--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 *.o
 *.la
 *.a
-*.m4
 .libs
 .deps
 autom4te.cache/
@@ -15,6 +14,8 @@ doc/doxygen.cfg
 *Makefile.in
 *Makefile
 aclocal.m4
+m4/lt*.m4
+m4/libtool.m4
 autom4te.cache
 depcomp
 compile
