Make examples work with both IPv4 and IPv6. Make examples use the first multicast interface with an IPv4 or IPv6 address as the default source or send interface address.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -34,11 +34,15 @@ multicast_receiver_LDADD = \
 multicast_receiver_CFLAGS = \
 	$(LIBEV_CFLAGS)
 multicast_receiver_SOURCES = \
+	multicast_interfaces.c \
+	multicast_interfaces.h \
 	multicast-receiver.c
 multicast_sender_LDADD = \
 	$(LIBEV_LIBS)
 multicast_sender_CFLAGS = \
 	$(LIBEV_CFLAGS)
 multicast_sender_SOURCES = \
+	multicast_interfaces.c \
+	multicast_interfaces.h \
 	multicast-sender.c
 
