--- a/configure.ac
+++ b/configure.ac
@@ -79,7 +79,8 @@ AC_DEFINE_UNQUOTED([HAVE_LIBEV], [$HAVE_LIBEV], [If we have libev available])
 AC_SUBST([LIBEV_CFLAGS])
 AC_SUBST([LIBEV_LIBS])
 
-AC_ARG_ENABLE([debug], [Enable debugging output from the library],
+AC_ARG_ENABLE([debug],
+    [AS_HELP_STRING([--enable-debug], [Enable debugging output from the library])],
     AC_DEFINE([DEBUGOUT], 1, [Enable debugging output from the library]))
 
 AC_CONFIG_FILES([
