Remove libtool la file in package and include static library.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -48,7 +48,8 @@ multicast_sender_SOURCES = \
 
 if HAVE_OPENSSL
 noinst_SCRIPTS = create_cert.sh
-EXTRA_DIST = create_cert.sh
+EXTRA_DIST = \
+	create_cert.sh
 CLEANFILES = \
 	sender.key \
 	sender.pem
