--- a/lib/libnghq.pc.in
+++ b/lib/libnghq.pc.in
@@ -29,6 +29,6 @@ Name: libnghq
 Description: nghq library
 URL: https://github.com/bbc/nghq
 Version: @VERSION@
-Requires: libngtcp2, libnghttp2
-Libs: -L${libdir} -lnghq
+Requires: libngtcp2
+Libs: -L${libdir} -lnghq -lls-qpack
 Cflags: -I${includedir}
