First experiment with removing ngtcp2 from nghq

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -39,6 +39,7 @@ OBJECTS = \
 	multicast.c \
 	io_buf.c \
 	version.c \
+	quic_transport.c \
 	nghq.c
 
 HDRS = \
@@ -53,6 +54,7 @@ HDRS = \
 	tcp2_callbacks.h \
 	multicast.h \
 	io_buf.h \
+	quic_transport.h \
 	util.h
 
 libnghq_la_CFLAGS = -I$(top_srcdir)/include $(NGTCP2_CFLAGS) -I$(top_srcdir)/ls-qpack
