Include path to generated header files in library CFLAGS

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -53,7 +53,7 @@ HDRS = \
 	quic_transport.h \
 	util.h
 
-libnghq_la_CFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/ls-qpack
+libnghq_la_CFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/ls-qpack -I$(top_builddir)/include
 libnghq_la_LIBADD = -L$(abs_top_builddir)/ls-qpack-build/ -lls-qpack
 libnghq_la_SOURCES = $(HDRS) $(OBJECTS)
 nodist_libnghq_la_SOURCES = git-version.h
